# exokernel

./: Cargo.toml  rust-toolchain.toml
src/: main.rs  memory.rs  serial.rs
src/arch/: gdt.rs  idt.rs  interrupts.rs  mod.rs
src/caps/: manager.rs  mod.rs
src/memory/: frame_allocator.rs  heap.rs  mod.rs
src/objstore/: gated.rs  mod.rs  store.rs
src/task/: mod.rs  scheduler.rs
tools/: build-image.sh
