[package]
name = "exokernel"
version = "0.1.0"
edition = "2021"
authors = ["ParyantaOS Team"]
license = "MIT OR Apache-2.0"
description = "ParyantaOS Exokernel - minimal kernel"
repository = "https://github.com/ParyantaOS/exokernel"

[dependencies]
# Bootloader API (entry point, boot info, config)
bootloader_api = "0.11"

# x86_64 hardware abstractions
x86_64 = "0.14"

# Serial port driver (COM1 at 0x3F8 for QEMU debugging)
uart_16550 = "0.3"

# Programmable Interrupt Controller
pic8259 = "0.10"

# no_std utilities
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# Heap allocator
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
